overflow-x, meta tag for correct cizing and 100% width of main element

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -57,8 +57,10 @@
   }
 }
 
-html {
+html,
+body {
   overflow-x: hidden;
+  width: 100%;
 }
 
 @layer base {
